# find_my_car

./: .gitignore  README.md  app.py  pyproject.toml  requirements.in  requirements.txt  test_app.py  test_output.py
cinch_scraper/: README.md  requirements.txt  scrapy.cfg
cinch_scraper/cinch_scraper/: settings.py
find_my_car/: __init__.py  app.py  recommender.py
find_my_car/data/: sample_cars.csv
